CHANGE: Properties file and Rest Controller

--- a/demoapp/src/main/resources/application.properties
+++ b/demoapp/src/main/resources/application.properties
@@ -3,5 +3,6 @@
 server.port = 8585
 
 #Setting some values
+app.version = 0.0.1 - SNAPSHOT
 coach.name = "Pedro"
 team.name = "Team Desenvolvimento"
