--- a/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.properties
+++ b/01-spring-boot-overview/01-spring-boot-demo/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 
 #Setting server port
-server.port = 8585
+server.port = 8080
 
 #Setting some values
-app.version = 0.0.1 - SNAPSHOT
-coach.name = "Pedro"
-team.name = "Team Desenvolvimento"
+#app.version = 0.0.1 - SNAPSHOT
+#coach.name = "Pedro"
+#team.name = "Team Desenvolvimento"
+
+#Working with actuator endpoints
+
+management.endpoints.web.exposure.include = *
+management.endpoints.web.exposure.exclude = info, health
+management.info.env.enabled = true
+
+#Setting some parameters, so it can be exposed by '../actuator/info'
+
+info.app.name =DemoApp
+info.app.description = A cool app
+info.app.version = 0.0.1 - Snapshot
+
+#Working with security [At this point, we will directly set users and passwords on this property file]
+spring.security.user.name = Pedro
+spring.security.user.password = 1234
