Working with some properties | Change folder structure

--- a/01-spring-boot-demo/src/main/resources/application.properties
+++ b/01-spring-boot-demo/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #Setting server port
 server.port = 8080
 
+server.servlet.context-path = /mydemoapp
+
 #Setting some values
 #app.version = 0.0.1 - SNAPSHOT
 #coach.name = "Pedro"
