--- a/03 - CRUD - Hibernate - JPA/App/src/main/resources/application.properties
+++ b/03 - CRUD - Hibernate - JPA/App/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/student_tracker
 spring.datasource.username = springstudent
 spring.datasource.password = springstudent
+#Create = Will drop all the data and create the tables on the DB
+
+#Add logging configs to display SQL statements
+logging.level.org.hibernate.SQL = debug
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+#Configure JPA/HIBERNATE to auto create tables.
+spring.jpa.hibernate.ddl-auto = create
